--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,16 @@
 body {
     color: #f7f7f7;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 .jumbotron {
     background-image: url("../images/nasa.jpg");
     background-size: 100% 100%;
     text-align: center;
   }
+
+  
